# wozzits-scene-render

./: .gitignore  CMakeLists.txt  README.md
cmake/: scene_renderConfig.cmake.in
scene_render/render/frame/: frame_builder.h  render_frame.h
scene_render/render/ir/: render_ir.h
scene_render/scene/: notes.txt  scene_.h  scene_graph.h  transform_node.h
scene_render/scene/compile/: compiled_scene.h  scene_compiler.h
src/: CMakeLists.txt  scene_graph.cpp  snippet
src/scene_render/: render_frame.cpp  render_ir.cpp  scene_compiler.cpp
tests/render/: render_ir_test_3.cpp  stub_backend_test_4.cpp
tests/scene_compile/: scene_compiler_test_2.cpp
tests/scene_graph/: scene_graph_test_1.cpp
tests/transform_node/: transform_node_1.cpp
